--- a/.travis.yml
+++ b/.travis.yml
@@ -54,4 +54,7 @@ script:
     (cat build.log && exit 1)
 - cd ..
 - export PATH=$OPENRESTY_PREFIX/nginx/sbin:$PATH
-- make test jobs=$JOBS
+- make test jobs=$JOBS > build.log 2>&1 ||
+    (cat build.log && exit 1)
+- cat build.log
+- if [ `grep -c '== Invalid' build.log` -gt 0 ]; then echo 'valgrind complaining' && exit 1; fi
